--- a/src/components/aboutSelf/ProjectCard.scss
+++ b/src/components/aboutSelf/ProjectCard.scss
@@ -18,9 +18,9 @@ $Raleway:'Raleway',sans-serif;
 }//card-wrapper
 
 .card{
-    max-width:30rem ;
+    max-width:25rem ;
     height: 20rem;
-    border-radius: 16px;
+    border-radius: 12px;
     overflow: hidden;
     cursor:pointer;
     position: relative;
@@ -32,11 +32,14 @@ $Raleway:'Raleway',sans-serif;
         width:90%;
         height:90%;
         z-index:2;
-        background-color: #000;
+        // background-color: #000;
         transition:.5s;
         img{
-            width:100%;
-            height:100%;
+            width:72%;
+            height:76%;
+            top: 21%;
+            position: relative;
+            left: 14%;
             object-fit: cover;
         }
     }//card-image
